# Edge-Detection-Viewer

./: .gitignore  README.md  rewrite_authors.sh  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  edge_processor.cpp  edge_processor.h  native-lib.cpp
app/src/main/java/com/edgedemo/: MainActivity.kt
app/src/main/java/com/edgedemo/camera/: CameraController.kt
app/src/main/java/com/edgedemo/gl/: GLRenderer.kt
app/src/main/java/com/edgedemo/nativebridge/: NativeBridge.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: styles.xml
web/: package-lock.json  package.json  server.js  tsconfig.json
web/public/: index.html
web/src/: main.ts
